--- a/assets/css.css
+++ b/assets/css.css
@@ -99,13 +99,14 @@ h3 {
 nav {
   float: right;
   margin-top: 25px;
+  color: black;
 }
 nav a {
   display: inline-block;
   padding-left: 15px;
   margin-left: 15px;
   line-height: 18px;
-  color: #999;
+  color: #black;
   text-decoration: none;
   border-left: 1px solid #efefef;
 }
@@ -196,4 +197,34 @@ input[type=submit] {
   cursor: pointer;
   background: #4aaaa5;
   border: 0 none;
+}
+@media screen and (max-width: 980px){
+  .main-section {
+    max-width: 500px;
+    margin-left: 50px;
+
+}
+
+@media screen and (max-width: 768px){
+  .sidebar {
+    max-width: 750px;
+    margin-right: 10px;
+}
+.main-section {
+  max-width: 675px;
+  margin-left: 50px;
+}
+
+@media screen and (max-width: 640px) {
+  .main-section{
+    max-width: 500px;
+}
+.sidebar {
+  max-width: 600px;
+}
+#logo {
+  width: 640px;
+}
+nav {
+margin-right: 200px;
 }
